--- a/index.html
+++ b/index.html
@@ -532,17 +532,17 @@
                 </div>
             </nav>
             <div class="mt-8 flex justify-center space-x-6">
-                <a href="#" class="text-gray-400 hover:text-gray-500">
-                    <span class="sr-only">Twitter</span>
-                    <i class="fab fa-twitter text-xl"></i>
+                <a href="https://wa.me/628567439354?text=Halo%20ka%20saya%20tertarik%20dengan%20Feedio" class="text-gray-400 hover:text-gray-500">
+                    <span class="sr-only">Whatsapp</span>
+                    <i class="fab fa-whatsapp text-xl"></i>
                 </a>
-                <a href="#" class="text-gray-400 hover:text-gray-500">
+                <a href="https://www.youtube.com/@OklaLabs" class="text-gray-400 hover:text-gray-500">
                     <span class="sr-only">YouTube</span>
                     <i class="fab fa-youtube text-xl"></i>
                 </a>
-                <a href="#" class="text-gray-400 hover:text-gray-500">
-                    <span class="sr-only">Discord</span>
-                    <i class="fab fa-discord text-xl"></i>
+                <a href="https://www.tiktok.com/@okla_lite" class="text-gray-400 hover:text-gray-500">
+                    <span class="sr-only">TikTok</span>
+                    <i class="fab fa-tiktok text-xl"></i>
                 </a>
                 <a href="#" class="text-gray-400 hover:text-gray-500">
                     <span class="sr-only">GitHub</span>
