--- a/index.html
+++ b/index.html
@@ -6,7 +6,6 @@
     <title>Feedio - AI-Powered Video Generator</title>
     <script src="https://cdn.tailwindcss.com"></script>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
-    <link rel="icon" href="https://blogger.googleusercontent.com/img/a/AVvXsEhpGLVexj0fNurWL6o_qo29hJGNYg3KRK3yX3A6r2NMMXGM8Wxo3a8UNdd974sUQChPEZlY9UeIWQUdeuLp9CVdSJ4cKusuxphAlz3fI1UDMKcTpizCtUymtipijkVJrTd7XCx086iPEAmZB8u6KlOfhOhCbe-N7wIxbfffz_BdDjkXpssvD9Ep86OH9P_H" type="image/png">
     <style>
         .gradient-bg {
             background: linear-gradient(135deg, #6e8efb 0%, #4a6cf7 100%);
@@ -233,8 +232,11 @@
         <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8">
             <div class="lg:text-center">
                 <h2 class="text-base text-blue-100 font-semibold tracking-wide uppercase">Download</h2>
-                <p class="mt-2 text-3xl leading-8 font-extrabold tracking-tight text-white sm:text-4xl">
-                    Get Feedio for Windows
+                <p class="mt-2 text-2xl leading-8 font-extrabold tracking-tight text-white sm:text-4xl">
+                    Get 
+                    <img src="https://blogger.googleusercontent.com/img/a/AVvXsEhhvP6pgETkPNJe2AT6utIKqAKwYYVywCjnLIxC18X-YNMG7qtLFQWoYVuWuegreDfL_GIZyWG-t1ClUHUd_jF1afxWCGPFfRLJaEftDcRlD7o50093ZMambTtgGCjnWpth-nWNqDrIIHcvwC6vT22h1WNHA1W-uetp7pJMAQrzIS_CAC2C7SgYgdYNWR6P" 
+                        alt="Feedio Logo" class="inline h-9 w-auto relative -top-2"> 
+                    for Windows
                 </p>
                 <p class="mt-4 max-w-2xl text-xl text-blue-100 lg:mx-auto">
                     Start creating amazing videos today with our latest version
