--- a/index.html
+++ b/index.html
@@ -3,9 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Feedio - AI-Powered Video Generator</title>
+    <title>Feedio | AI Powered Video Generator</title>
     <script src="https://cdn.tailwindcss.com"></script>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
+    <link rel="icon" href="https://blogger.googleusercontent.com/img/a/AVvXsEhpGLVexj0fNurWL6o_qo29hJGNYg3KRK3yX3A6r2NMMXGM8Wxo3a8UNdd974sUQChPEZlY9UeIWQUdeuLp9CVdSJ4cKusuxphAlz3fI1UDMKcTpizCtUymtipijkVJrTd7XCx086iPEAmZB8u6KlOfhOhCbe-N7wIxbfffz_BdDjkXpssvD9Ep86OH9P_H" type="image/png">
     <style>
         .gradient-bg {
             background: linear-gradient(135deg, #6e8efb 0%, #4a6cf7 100%);
@@ -71,8 +72,11 @@
                             <span class="block text-blue-600">For Professionals & Creators</span>
                         </h1>
                         <p class="mt-3 text-base text-gray-500 sm:mt-5 sm:text-lg sm:max-w-xl sm:mx-auto md:mt-5 md:text-xl lg:mx-0">
-                            Feedio transforms text and images into stunning videos with Veo2/Veo3 AI models. Enjoy advanced upscaling, unlimited generations, and batch processing in a sleek, professional workflow.
+                            <img src="https://blogger.googleusercontent.com/img/a/AVvXsEhPIhxAKeMSX1q1pFBqIws2yKttdDVo9CJivTXgcw7yo8Y6rtTqnGlaMBxIW71fmjJTz9ItGlkbX96ZiqNrt0focTMWooCsx6tEz7NmLcJDMyPYhmnNPFsQydaRmiLK8AjFB8xbw_A-Scky_omymD4Yu9sjviL87Ebb2TSJ4SclkoxlWBfGXktlE1e685iM" 
+                                alt="Feedio Logo" class="inline h-4 w-auto relative -top-1"> 
+                            transforms text and images into stunning videos with Veo2/Veo3 AI models. Enjoy advanced upscaling, unlimited generations, and batch processing in a sleek, professional workflow.
                         </p>
+
                         <div class="mt-5 sm:mt-8 sm:flex sm:justify-center lg:justify-start">
                             <div class="rounded-md shadow">
                                 <a href="#download" class="download-btn w-full flex items-center justify-center px-8 py-3 border border-transparent text-base font-medium rounded-md text-white gradient-bg hover:bg-blue-700 md:py-4 md:text-lg md:px-10">
@@ -251,9 +255,14 @@
                                 <i class="fas fa-download text-blue-600 text-3xl"></i>
                             </div>
                             <div class="ml-6">
-                                <h3 class="text-2xl font-bold text-gray-900">Feedio for Windows</h3>
+                                <h3 class="text-2xl font-bold text-gray-900">
+                                    <img src="https://blogger.googleusercontent.com/img/a/AVvXsEhPIhxAKeMSX1q1pFBqIws2yKttdDVo9CJivTXgcw7yo8Y6rtTqnGlaMBxIW71fmjJTz9ItGlkbX96ZiqNrt0focTMWooCsx6tEz7NmLcJDMyPYhmnNPFsQydaRmiLK8AjFB8xbw_A-Scky_omymD4Yu9sjviL87Ebb2TSJ4SclkoxlWBfGXktlE1e685iM" 
+                                        alt="Feedio Logo" class="inline h-6 w-auto relative -top-1"> 
+                                    for Windows
+                                </h3>
                                 <p class="mt-1 text-gray-600">Version 1.0.2 (Latest)</p>
                             </div>
+
                         </div>
                         <div class="mt-6">
                             <ul class="space-y-4">
@@ -553,8 +562,11 @@
                 </a>
             </div>
             <p class="mt-8 text-center text-base text-gray-400">
-                &copy; 2025 Feedio. All rights reserved.
+                &copy; 2025 
+                <img src="https://blogger.googleusercontent.com/img/a/AVvXsEhPIhxAKeMSX1q1pFBqIws2yKttdDVo9CJivTXgcw7yo8Y6rtTqnGlaMBxIW71fmjJTz9ItGlkbX96ZiqNrt0focTMWooCsx6tEz7NmLcJDMyPYhmnNPFsQydaRmiLK8AjFB8xbw_A-Scky_omymD4Yu9sjviL87Ebb2TSJ4SclkoxlWBfGXktlE1e685iM" 
+                    alt="Feedio Logo" class="inline h-4 w-auto relative -top-1"> All rights reserved.
             </p>
+
         </div>
     </footer>
 
