--- a/index.html
+++ b/index.html
@@ -463,18 +463,21 @@
                 </p>
             </div>
             <div class="mt-10 max-w-lg mx-auto lg:max-w-none">
-                <form class="grid grid-cols-1 gap-y-6 sm:grid-cols-2 sm:gap-x-8">
+                <form class="grid grid-cols-1 gap-y-6 sm:grid-cols-2 sm:gap-x-8" 
+                    action="mailto:inc.okla@gmail.com" 
+                    method="post" 
+                    enctype="text/plain">
                     <div class="sm:col-span-2">
                         <label for="name" class="block text-sm font-medium text-gray-700">Name</label>
-                        <input type="text" id="name" class="mt-1 block w-full border border-gray-300 rounded-md shadow-sm py-2 px-3 focus:outline-none focus:ring-blue-500 focus:border-blue-500">
+                        <input type="text" id="name" name="Name" class="mt-1 block w-full border border-gray-300 rounded-md shadow-sm py-2 px-3 focus:outline-none focus:ring-blue-500 focus:border-blue-500">
                     </div>
                     <div class="sm:col-span-2">
                         <label for="email" class="block text-sm font-medium text-gray-700">Email</label>
-                        <input type="email" id="email" class="mt-1 block w-full border border-gray-300 rounded-md shadow-sm py-2 px-3 focus:outline-none focus:ring-blue-500 focus:border-blue-500">
+                        <input type="email" id="email" name="Email" class="mt-1 block w-full border border-gray-300 rounded-md shadow-sm py-2 px-3 focus:outline-none focus:ring-blue-500 focus:border-blue-500">
                     </div>
                     <div class="sm:col-span-2">
                         <label for="message" class="block text-sm font-medium text-gray-700">Message</label>
-                        <textarea id="message" rows="4" class="mt-1 block w-full border border-gray-300 rounded-md shadow-sm py-2 px-3 focus:outline-none focus:ring-blue-500 focus:border-blue-500"></textarea>
+                        <textarea id="message" name="Message" rows="4" class="mt-1 block w-full border border-gray-300 rounded-md shadow-sm py-2 px-3 focus:outline-none focus:ring-blue-500 focus:border-blue-500"></textarea>
                     </div>
                     <div class="sm:col-span-2">
                         <button type="submit" class="w-full inline-flex justify-center py-3 px-6 border border-transparent shadow-sm text-base font-medium rounded-md text-white gradient-bg hover:bg-blue-700 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-blue-500">
