--- a/index.html
+++ b/index.html
@@ -35,35 +35,40 @@
     <!-- Navigation -->
     <nav class="bg-white shadow-lg sticky top-0 z-50">
         <div class="max-w-9xl mx-auto px-4 sm:px-6 lg:px-8">
-            <div class="flex justify-between h-16">
-                <div class="flex items-center">
-                    <div class="flex-shrink-0 flex items-center">
-                        <img src="https://blogger.googleusercontent.com/img/a/AVvXsEhPIhxAKeMSX1q1pFBqIws2yKttdDVo9CJivTXgcw7yo8Y6rtTqnGlaMBxIW71fmjJTz9ItGlkbX96ZiqNrt0focTMWooCsx6tEz7NmLcJDMyPYhmnNPFsQydaRmiLK8AjFB8xbw_A-Scky_omymD4Yu9sjviL87Ebb2TSJ4SclkoxlWBfGXktlE1e685iM" 
-                            alt="Feedio icon" class="h-8 w-auto">
-                    </div>
-
+            <div class="flex justify-between h-16 items-center">
+                
+                <!-- Logo di kiri -->
+                <div class="flex-shrink-0">
+                    <img src="https://blogger.googleusercontent.com/img/a/AVvXsEhPIhxAKeMSX1q1pFBqIws2yKttdDVo9CJivTXgcw7yo8Y6rtTqnGlaMBxIW71fmjJTz9ItGlkbX96ZiqNrt0focTMWooCsx6tEz7NmLcJDMyPYhmnNPFsQydaRmiLK8AjFB8xbw_A-Scky_omymD4Yu9sjviL87Ebb2TSJ4SclkoxlWBfGXktlE1e685iM" 
+                        alt="Feedio icon" class="h-8 w-auto">
                 </div>
-                <div class="hidden md:ml-6 md:flex md:items-center md:space-x-8">
+
+                <!-- Menu dan Download di kanan -->
+                <div class="hidden md:flex md:items-center md:space-x-6">
                     <a href="#features" class="text-gray-700 hover:text-blue-600 px-3 py-2 text-sm font-medium">Features</a>
-                    <a href="#download" class="text-gray-700 hover:text-blue-600 px-3 py-2 text-sm font-medium">Download</a>
                     <a href="#guides" class="text-gray-700 hover:text-blue-600 px-3 py-2 text-sm font-medium">Guides</a>
                     <a href="#releases" class="text-gray-700 hover:text-blue-600 px-3 py-2 text-sm font-medium">Releases</a>
-                </div>
-                <div class="flex items-center">
                     <a href="#download" class="download-btn inline-flex items-center px-4 py-2 border border-transparent text-sm font-medium rounded-md shadow-sm text-white gradient-bg hover:bg-blue-700 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-blue-500">
                         Download Now
                     </a>
-                    <button class="md:hidden inline-flex items-center justify-center p-2 rounded-md text-gray-400 hover:text-gray-500 hover:bg-gray-100 focus:outline-none focus:ring-2 focus:ring-inset focus:ring-blue-500 ml-4">
+                </div>
+
+                <!-- Hamburger menu untuk mobile -->
+                <div class="flex md:hidden">
+                    <button class="inline-flex items-center justify-center p-2 rounded-md text-gray-400 hover:text-gray-500 hover:bg-gray-100 focus:outline-none focus:ring-2 focus:ring-inset focus:ring-blue-500">
                         <i class="fas fa-bars"></i>
                     </button>
                 </div>
+
             </div>
         </div>
     </nav>
 
+
+
     <!-- Hero Section -->
     <div class="relative overflow-hidden">
-        <div class="max-w-7xl mx-auto">
+        <div class="w-full px-4 sm:px-6 lg:px-8">
             <div class="relative z-10 pb-8 bg-white sm:pb-16 md:pb-20 lg:max-w-2xl lg:w-full lg:pb-28 xl:pb-32">
                 <main class="mt-10 mx-auto max-w-7xl px-4 sm:mt-12 sm:px-6 md:mt-16 lg:mt-20 lg:px-8 xl:mt-28">
                     <div class="sm:text-center lg:text-left">
@@ -94,13 +99,13 @@
             </div>
         </div>
         <div class="lg:absolute lg:inset-y-0 lg:right-0 lg:w-1/2">
-            <img class="hero-image h-56 w-full object-cover sm:h-72 md:h-96 lg:w-full lg:h-full" src="https://images.unsplash.com/photo-1579389083078-4e7018379f7e?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=1470&q=80" alt="Video editing interface">
+            <img class="hero-image h-56 w-full object-cover sm:h-72 md:h-96 lg:w-full lg:h-full" src="https://blogger.googleusercontent.com/img/a/AVvXsEhjkq2nkxKDDHhFr56muInfV9gcI2b427ITiwjVbtA9q66Jx6Pbot6t7DTTDbV8v0gSIZLnMkNh0Xr95BsVZZKgQJEaeaZAlxa_QTUg-XOu2KnPRE3pgS7KeZALoWuBSvFUcS_rT_mnkNI1otAjbIe8gHRk8ZSqGEJat4jhQyreFBsp29BPBXqJrMYe2YRR" alt="Video editing interface">
         </div>
     </div>
 
     <!-- Features Section -->
     <div id="features" class="py-12 bg-white">
-        <div class="w-full px-4 sm:px-6 lg:px-8">
+        <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8">
             <div class="lg:text-center">
                 <h2 class="text-base text-blue-600 font-semibold tracking-wide uppercase">Features</h2>
                 <p class="mt-2 text-3xl leading-8 font-extrabold tracking-tight text-gray-900 sm:text-4xl">
