--- a/index.html
+++ b/index.html
@@ -441,6 +441,14 @@
                 <ul class="divide-y divide-gray-200">
                     <!-- Release 1 -->
                     <li class="py-4">
+                        <a href="https://github.com/inc-okla/Feedio/releases/download/1.0.2/FeedioSetup.exe" class="block hover:bg-gray-50 px-4 py-2 rounded-md transition">
+                            <div class="flex justify-between items-center">
+                                <p class="text-lg font-medium text-blue-600">Feedio v1.0.2</p>
+                                <p class="text-sm text-gray-500">August 12, 2025</p>
+                            </div>
+                        </a>
+                    </li>
+                    <li class="py-4">
                         <a href="https://github.com/inc-okla/Feedio/releases/download/1.0.1/FeedioSetup.exe" class="block hover:bg-gray-50 px-4 py-2 rounded-md transition">
                             <div class="flex justify-between items-center">
                                 <p class="text-lg font-medium text-blue-600">Feedio v1.0.1</p>
