--- a/index.html
+++ b/index.html
@@ -449,7 +449,7 @@
                         </a>
                     </li>
                     <li class="py-4">
-                        <a href="https://github.com/inc-okla/Feedio/releases/download/1.0.1/FeedioSetup.exe" class="block hover:bg-gray-50 px-4 py-2 rounded-md transition">
+                        <a href="#" class="block hover:bg-gray-50 px-4 py-2 rounded-md transition">
                             <div class="flex justify-between items-center">
                                 <p class="text-lg font-medium text-blue-600">Feedio v1.0.1</p>
                                 <p class="text-sm text-gray-500">August 08, 2025</p>
