--- a/index.html
+++ b/index.html
@@ -334,7 +334,7 @@
                 </p>
             </div>
             <div class="mt-10 aspect-w-16 aspect-h-9 max-w-4xl mx-auto">
-                <iframe class="w-full h-96 rounded-lg shadow-xl" src="https://www.youtube.com/embed/1QwidYPhZ7Q" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                <iframe class="w-full h-96 rounded-lg shadow-xl" src="https://www.youtube.com/embed/WCPtteLnRqI&feature" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
             </div>
         </div>
     </div>
