--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         .download-btn:hover {
             transform: scale(1.05);
         }
-        .hero-image {
+        .hero-image {youu
             animation: float 6s ease-in-out infinite;
         }
         @keyframes float {
@@ -328,16 +328,23 @@
                         alt="Feedio Logo" class="h-[35px] w-auto">
                     in Action
                 </p>
-
+    
                 <p class="mt-4 max-w-2xl text-xl text-gray-500 lg:mx-auto">
                     Watch how professionals use Feedio's AI tools to create amazing videos
                 </p>
             </div>
+    
             <div class="mt-10 aspect-w-16 aspect-h-9 max-w-4xl mx-auto">
-                <iframe class="w-full h-96 rounded-lg shadow-xl" src="https://www.youtube.com/embed/WCPtteLnRqI&feature" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                <iframe class="w-full h-96 rounded-lg shadow-xl"
+                    src="https://www.youtube.com/embed/WCPtteLnRqI"
+                    frameborder="0"
+                    allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+                    allowfullscreen>
+                </iframe>
             </div>
         </div>
     </div>
+
 
     <!-- Guides Section -->
     <div id="guides" class="py-12 bg-white">
