--- a/index.html
+++ b/index.html
@@ -245,19 +245,21 @@
                     Get 
                     <img src="https://blogger.googleusercontent.com/img/a/AVvXsEhhvP6pgETkPNJe2AT6utIKqAKwYYVywCjnLIxC18X-YNMG7qtLFQWoYVuWuegreDfL_GIZyWG-t1ClUHUd_jF1afxWCGPFfRLJaEftDcRlD7o50093ZMambTtgGCjnWpth-nWNqDrIIHcvwC6vT22h1WNHA1W-uetp7pJMAQrzIS_CAC2C7SgYgdYNWR6P" 
                         alt="Feedio Logo" class="inline h-9 w-auto relative -top-2"> 
-                    for Windows
+                    for Windows & Linux
                 </p>
                 <p class="mt-4 max-w-2xl text-xl text-blue-100 lg:mx-auto">
                     Start creating amazing videos today with our latest version
                 </p>
             </div>
 
-            <div class="mt-10 flex flex-col items-center">
-                <div class="bg-white rounded-lg shadow-xl overflow-hidden w-full max-w-2xl">
+            <!-- Flex container for both versions -->
+            <div class="mt-10 lg:flex lg:space-x-6 lg:justify-center">
+                <!-- Windows Card -->
+                <div class="bg-white rounded-lg shadow-xl overflow-hidden w-full max-w-2xl mb-6 lg:mb-0">
                     <div class="p-8">
                         <div class="flex items-center">
                             <div class="flex-shrink-0 bg-blue-100 rounded-md p-4">
-                                <i class="fas fa-download text-blue-600 text-3xl"></i>
+                                <i class="fab fa-windows text-blue-600 text-3xl"></i>
                             </div>
                             <div class="ml-6">
                                 <h3 class="text-2xl font-bold text-gray-900">
@@ -267,45 +269,19 @@
                                 </h3>
                                 <p class="mt-1 text-gray-600">Version 1.0.3 (Latest)</p>
                             </div>
+                        </div>
 
-                        </div>
-                        <div class="mt-6">
-                            <ul class="space-y-4">
-                                <li class="flex items-start">
-                                    <div class="flex-shrink-0">
-                                        <i class="fas fa-check-circle text-green-500"></i>
-                                    </div>
-                                    <p class="ml-3 text-base text-gray-700">Text to Veo2/Veo3 video generation</p>
-                                </li>
-                                <li class="flex items-start">
-                                    <div class="flex-shrink-0">
-                                        <i class="fas fa-check-circle text-green-500"></i>
-                                    </div>
-                                    <p class="ml-3 text-base text-gray-700">Image to Veo2/Veo3 video conversion</p>
-                                </li>
-                                <li class="flex items-start">
-                                    <div class="flex-shrink-0">
-                                        <i class="fas fa-check-circle text-green-500"></i>
-                                    </div>
-                                    <p class="ml-3 text-base text-gray-700">Feedio Scale2x/3x/4x upscaling</p>
-                                </li>
-                                <li class="flex items-start">
-                                    <div class="flex-shrink-0">
-                                        <i class="fas fa-check-circle text-green-500"></i>
-                                    </div>
-                                    <p class="ml-3 text-base text-gray-700">Built-in AI prompt generator</p>
-                                </li>
-                                <li class="flex items-start">
-                                    <div class="flex-shrink-0">
-                                        <i class="fas fa-check-circle text-green-500"></i>
-                                    </div>
-                                    <p class="ml-3 text-base text-gray-700">Batch multi-window processing</p>
-                                </li>
-                            </ul>
-                        </div>
+                        <ul class="mt-6 space-y-4">
+                            <li class="flex items-start"><i class="fas fa-check-circle text-green-500 mr-2"></i><p class="text-gray-700">Text to Veo2/Veo3 video generation</p></li>
+                            <li class="flex items-start"><i class="fas fa-check-circle text-green-500 mr-2"></i><p class="text-gray-700">Image to Veo2/Veo3 video conversion</p></li>
+                            <li class="flex items-start"><i class="fas fa-check-circle text-green-500 mr-2"></i><p class="text-gray-700">Feedio Scale2x/3x/4x upscaling</p></li>
+                            <li class="flex items-start"><i class="fas fa-check-circle text-green-500 mr-2"></i><p class="text-gray-700">Built-in AI prompt generator</p></li>
+                            <li class="flex items-start"><i class="fas fa-check-circle text-green-500 mr-2"></i><p class="text-gray-700">Batch multi-window processing</p></li>
+                        </ul>
+
                         <div class="mt-8">
                             <a href="https://github.com/inc-okla/Feedio/releases/download/1.0.3/FeedioSetup.exe" class="download-btn w-full flex items-center justify-center px-8 py-4 border border-transparent text-base font-medium rounded-md text-white gradient-bg hover:bg-blue-700 md:text-lg">
-                                <i class="fas fa-download mr-2"></i> Download Now (64-bit)
+                                <i class="fas fa-download mr-2"></i> Fast Download (64-bit)
                             </a>
                             <p class="mt-2 text-center text-sm text-gray-600">
                                 Windows 10/11 (64-bit) required. 4GB RAM minimum, 8GB recommended.
@@ -313,10 +289,46 @@
                         </div>
                     </div>
                 </div>
+
+                <!-- Linux Card -->
+                <div class="bg-white rounded-lg shadow-xl overflow-hidden w-full max-w-2xl">
+                    <div class="p-8">
+                        <div class="flex items-center">
+                            <div class="flex-shrink-0 bg-green-100 rounded-md p-4">
+                                <i class="fab fa-linux text-green-600 text-3xl"></i>
+                            </div>
+                            <div class="ml-6">
+                                <h3 class="text-2xl font-bold text-gray-900">
+                                    <img src="https://blogger.googleusercontent.com/img/a/AVvXsEhPIhxAKeMSX1q1pFBqIws2yKttdDVo9CJivTXgcw7yo8Y6rtTqnGlaMBxIW71fmjJTz9ItGlkbX96ZiqNrt0focTMWooCsx6tEz7NmLcJDMyPYhmnNPFsQydaRmiLK8AjFB8xbw_A-Scky_omymD4Yu9sjviL87Ebb2TSJ4SclkoxlWBfGXktlE1e685iM" 
+                                        alt="Feedio Logo" class="inline h-6 w-auto relative -top-1"> 
+                                    for Linux
+                                </h3>
+                                <p class="mt-1 text-gray-600">Version 1.0.3 (Latest)</p>
+                            </div>
+                        </div>
+
+                        <ul class="mt-6 space-y-4">
+                            <li class="flex items-start"><i class="fas fa-check-circle text-green-500 mr-2"></i><p class="text-gray-700">Text to Veo2/Veo3 video generation</p></li>
+                            <li class="flex items-start"><i class="fas fa-check-circle text-green-500 mr-2"></i><p class="text-gray-700">Image to Veo2/Veo3 video conversion</p></li>
+                            <li class="flex items-start"><i class="fas fa-check-circle text-green-500 mr-2"></i><p class="text-gray-700">Feedio Scale2x/3x/4x upscaling</p></li>
+                            <li class="flex items-start"><i class="fas fa-check-circle text-green-500 mr-2"></i><p class="text-gray-700">Built-in AI prompt generator</p></li>
+                            <li class="flex items-start"><i class="fas fa-check-circle text-green-500 mr-2"></i><p class="text-gray-700">Batch multi-terminal support</p></li>
+                        </ul>
+
+                        <div class="mt-8">
+                            <a href="https://github.com/inc-okla/Feedio/releases/download/1.0.3/FeedioLinux.tar.gz" class="download-btn w-full flex items-center justify-center px-8 py-4 border border-transparent text-base font-medium rounded-md text-white bg-green-600 hover:bg-green-700 md:text-lg">
+                                <i class="fas fa-download mr-2"></i> Download Now (64-bit)
+                            </a>
+                            <p class="mt-2 text-center text-sm text-gray-600">
+                                Ubuntu 20.04+, Debian, Arch (64-bit). 4GB RAM min, 8GB recommended.
+                            </p>
+                        </div>
+                    </div>
+                </div>
             </div>
         </div>
     </div>
-
+    
     <!-- Demo Video Section -->
     <div class="py-12 bg-gray-50">
         <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8">
