--- a/index.html
+++ b/index.html
@@ -316,7 +316,7 @@
                         </ul>
 
                         <div class="mt-8">
-                            <a href="https://github.com/inc-okla/Feedio/releases/download/1.0.3/FeedioLinux.tar.gz" class="download-btn w-full flex items-center justify-center px-8 py-4 border border-transparent text-base font-medium rounded-md text-white bg-green-600 hover:bg-green-700 md:text-lg">
+                            <a href="https://github.com/inc-okla/Feedio/releases/download/1.0.3/FeedioLinux.deb" class="download-btn w-full flex items-center justify-center px-8 py-4 border border-transparent text-base font-medium rounded-md text-white bg-green-600 hover:bg-green-700 md:text-lg">
                                 <i class="fas fa-download mr-2"></i> Download Now (64-bit)
                             </a>
                             <p class="mt-2 text-center text-sm text-gray-600">
