--- a/index.html
+++ b/index.html
@@ -386,7 +386,7 @@
                                         Learn the basics of Feedio and create your first video.
                                     </p>
                                     <div class="mt-3">
-                                        <a href="#" class="text-sm font-medium text-blue-600 hover:text-blue-500">
+                                        <a href="https://www.youtube.com/@OklaLabs" class="text-sm font-medium text-blue-600 hover:text-blue-500">
                                             Read guide <span aria-hidden="true">&rarr;</span>
                                         </a>
                                     </div>
@@ -430,7 +430,7 @@
                                         Fine-tune your video generation with advanced options.
                                     </p>
                                     <div class="mt-3">
-                                        <a href="#" class="text-sm font-medium text-blue-600 hover:text-blue-500">
+                                        <a href="https://github.com/inc-okla/Feedio/releases/download/v.1.0.0/Feedio.Panduan.Pengguna.pdf" class="text-sm font-medium text-blue-600 hover:text-blue-500">
                                             Read guide <span aria-hidden="true">&rarr;</span>
                                         </a>
                                     </div>
