--- a/index.html
+++ b/index.html
@@ -438,6 +438,30 @@
                             </div>
                         </div>
                     </div>
+
+                    <!-- Guide 4 -->
+                    <div class="bg-white overflow-hidden shadow rounded-lg">
+                        <div class="p-5">
+                            <div class="flex items-center">
+                                <div class="flex-shrink-0 bg-blue-100 rounded-md p-3">
+                                    <i class="fas fa-expand-arrows-alt text-blue-600"></i>
+                                </div>
+                                <div class="ml-5 w-0 flex-1">
+                                    <h3 class="text-lg font-medium text-gray-900">Upscale Video (Free)</h3>
+                                    <p class="mt-1 text-sm text-gray-500">
+                                        Enhance and upscale your videos using VideoProc for free.
+                                    </p>
+                                    <div class="mt-3">
+                                        <a href="https://www.videoproc.com/" target="_blank" class="text-sm font-medium text-blue-600 hover:text-blue-500">
+                                            Download tool <span aria-hidden="true">&rarr;</span>
+                                        </a>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+
+                    
                 </div>
             </div>
         </div>
