--- a/index.html
+++ b/index.html
@@ -267,21 +267,23 @@
                                         alt="Feedio Logo" class="inline h-6 w-auto relative -top-1"> 
                                     for Windows
                                 </h3>
-                                <p class="mt-1 text-gray-600">Version 1.0.3 (Latest)</p>
+                                <p class="mt-1 text-gray-600">Version 1.0.4 (Latest)</p>
                             </div>
                         </div>
 
                         <ul class="mt-6 space-y-4">
+                            <li class="flex items-start"><i class="fas fa-check-circle text-green-500 mr-2"></i><p class="text-gray-700">Unlimited generation</p></li>
                             <li class="flex items-start"><i class="fas fa-check-circle text-green-500 mr-2"></i><p class="text-gray-700">Text to Veo2/Veo3 video generation</p></li>
                             <li class="flex items-start"><i class="fas fa-check-circle text-green-500 mr-2"></i><p class="text-gray-700">Image to Veo2/Veo3 video conversion</p></li>
+                            <li class="flex items-start"><i class="fas fa-check-circle text-green-500 mr-2"></i><p class="text-gray-700">Feedio ImageScraft generation</p></li>
                             <li class="flex items-start"><i class="fas fa-check-circle text-green-500 mr-2"></i><p class="text-gray-700">Feedio Scale2x/3x/4x upscaling</p></li>
                             <li class="flex items-start"><i class="fas fa-check-circle text-green-500 mr-2"></i><p class="text-gray-700">Built-in AI prompt generator</p></li>
                             <li class="flex items-start"><i class="fas fa-check-circle text-green-500 mr-2"></i><p class="text-gray-700">Batch multi-window processing</p></li>
                         </ul>
 
                         <div class="mt-8">
-                            <a href="https://github.com/inc-okla/Feedio/releases/download/1.0.3/FeedioSetup.exe" class="download-btn w-full flex items-center justify-center px-8 py-4 border border-transparent text-base font-medium rounded-md text-white gradient-bg hover:bg-blue-700 md:text-lg">
-                                <i class="fas fa-download mr-2"></i> Fast Download (64-bit)
+                            <a href="https://github.com/inc-okla/Feedio/releases/download/1.0.4/FeedioSetup.exe" class="download-btn w-full flex items-center justify-center px-8 py-4 border border-transparent text-base font-medium rounded-md text-white gradient-bg hover:bg-blue-700 md:text-lg">
+                                <i class="fas fa-download mr-2"></i> Free Download (64-bit)
                             </a>
                             <p class="mt-2 text-center text-sm text-gray-600">
                                 Windows 10/11 (64-bit) required. 4GB RAM minimum, 8GB recommended.
@@ -308,11 +310,13 @@
                         </div>
 
                         <ul class="mt-6 space-y-4">
+                            <li class="flex items-start"><i class="fas fa-check-circle text-green-500 mr-2"></i><p class="text-gray-700">Unlimited generation</p></li>
                             <li class="flex items-start"><i class="fas fa-check-circle text-green-500 mr-2"></i><p class="text-gray-700">Text to Veo2/Veo3 video generation</p></li>
                             <li class="flex items-start"><i class="fas fa-check-circle text-green-500 mr-2"></i><p class="text-gray-700">Image to Veo2/Veo3 video conversion</p></li>
+                            <li class="flex items-start"><i class="fas fa-check-circle text-green-500 mr-2"></i><p class="text-gray-700">Feedio ImageScraft generation</p></li>
                             <li class="flex items-start"><i class="fas fa-check-circle text-green-500 mr-2"></i><p class="text-gray-700">Feedio Scale2x/3x/4x upscaling</p></li>
                             <li class="flex items-start"><i class="fas fa-check-circle text-green-500 mr-2"></i><p class="text-gray-700">Built-in AI prompt generator</p></li>
-                            <li class="flex items-start"><i class="fas fa-check-circle text-green-500 mr-2"></i><p class="text-gray-700">Batch multi-terminal support</p></li>
+                            <li class="flex items-start"><i class="fas fa-check-circle text-green-500 mr-2"></i><p class="text-gray-700">Batch multi-window processing</p></li>
                         </ul>
 
                         <div class="mt-8">
