--- a/index.html
+++ b/index.html
@@ -231,6 +231,25 @@
                             </div>
                         </div>
                     </div>
+                    <!-- Feature 7 - Unlimited Image Generation -->
+                    <div class="feature-card transition-all duration-300 ease-in-out bg-white rounded-lg shadow-md overflow-hidden">
+                        <div class="p-5">
+                            <div class="flex items-center">
+                                <div class="flex-shrink-0 bg-blue-100 rounded-md p-3">
+                                    <i class="fas fa-image text-blue-600 text-xl"></i>
+                                </div>
+                                <div class="ml-5">
+                                    <h3 class="text-lg font-medium text-gray-900">Unlimited Image Generation</h3>
+                                </div>
+                            </div>
+                            <div class="mt-4">
+                                <p class="text-base text-gray-500">
+                                    Generate unlimited AI-powered images with the new Feedio ImageCraft model integration.
+                                </p>
+                            </div>
+                        </div>
+                    </div>
+
                 </div>
             </div>
         </div>
@@ -465,7 +484,7 @@
                         </div>
                     </div>
     
-                    <!-- Guide 5 - Generate Gambar Unlimited -->
+                    <!-- Guide 5 - Unlimited Image Generation -->
                     <div class="bg-white overflow-hidden shadow rounded-lg">
                         <div class="p-5">
                             <div class="flex items-center">
@@ -473,9 +492,9 @@
                                     <i class="fas fa-image text-blue-600"></i>
                                 </div>
                                 <div class="ml-5 w-0 flex-1">
-                                    <h3 class="text-lg font-medium text-gray-900">Generate Gambar Unlimited</h3>
+                                    <h3 class="text-lg font-medium text-gray-900">Unlimited Image Generation</h3>
                                     <p class="mt-1 text-sm text-gray-500">
-                                        Panduan lengkap untuk mengakses fitur AI Image Generator tanpa batas di Feedio ImageCraft.
+                                        Complete guide to unlock unlimited AI image generation in Feedio ImageCraft.
                                     </p>
                                     <div class="mt-3">
                                         <a href="https://github.com/inc-okla/Feedio/releases/download/1.0.4/PANDUAN.MENDAPATKAN.API.ACCESS.GENERATE.IMAGE.UNLIMITED.pdf" class="text-sm font-medium text-blue-600 hover:text-blue-500" target="_blank">
@@ -486,6 +505,7 @@
                             </div>
                         </div>
                     </div>
+
     
                 </div>
             </div>
