--- a/index.html
+++ b/index.html
@@ -301,7 +301,7 @@
                         </ul>
 
                         <div class="mt-8">
-                            <a href="https://github.com/inc-okla/Feedio/releases/download/1.0.5/FeedioSetup.exe" class="download-btn w-full flex items-center justify-center px-8 py-4 border border-transparent text-base font-medium rounded-md text-white gradient-bg hover:bg-blue-700 md:text-lg">
+                            <a href="https://github.com/inc-okla/Feedio/releases/download/1.0.6/FeedioSetup.exe" class="download-btn w-full flex items-center justify-center px-8 py-4 border border-transparent text-base font-medium rounded-md text-white gradient-bg hover:bg-blue-700 md:text-lg">
                                 <i class="fas fa-download mr-2"></i> Free Download (64-bit)
                             </a>
                             <p class="mt-2 text-center text-sm text-gray-600">
@@ -529,6 +529,14 @@
             <div class="mt-10 max-w-2xl mx-auto">
                 <ul class="divide-y divide-gray-200">
                     <!-- Release 1 -->
+                    <li class="py-4">
+                        <a href="https://github.com/inc-okla/Feedio/releases/download/1.0.6/FeedioSetup.exe" class="block hover:bg-gray-50 px-4 py-2 rounded-md transition">
+                            <div class="flex justify-between items-center">
+                                <p class="text-lg font-medium text-blue-600">Feedio v1.0.6</p>
+                                <p class="text-sm text-gray-500">Semtember 09, 2025</p>
+                            </div>
+                        </a>
+                    </li>
                     <li class="py-4">
                         <a href="https://github.com/inc-okla/Feedio/releases/download/1.0.5/FeedioSetup.exe" class="block hover:bg-gray-50 px-4 py-2 rounded-md transition">
                             <div class="flex justify-between items-center">
