--- a/index.html
+++ b/index.html
@@ -271,11 +271,14 @@
               </div>
             </div>
             <ul class="mt-6 space-y-4">
-              <li class="flex items-start"><i class="fas fa-check-circle text-green-500 mr-2"></i><p class="text-gray-700">Unlimited generation</p></li>
+              <li class="flex items-start"><i class="fas fa-check-circle text-green-500 mr-2"></i><p class="text-gray-700">Unlimited generation options</p></li>
               <li class="flex items-start"><i class="fas fa-check-circle text-green-500 mr-2"></i><p class="text-gray-700">Generate VEO (Veo2/Veo3)</p></li>
-              <li class="flex items-start"><i class="fas fa-check-circle text-green-500 mr-2"></i><p class="text-gray-700">ImagenFX, Whisk, Firefly</p></li>
-              <li class="flex items-start"><i class="fas fa-check-circle text-green-500 mr-2"></i><p class="text-gray-700">Cloud image & video upscaling</p></li>
+              <li class="flex items-start"><i class="fas fa-check-circle text-green-500 mr-2"></i><p class="text-gray-700">ImagenFX, Whisk, Firefly generation</p></li>
+              <li class="flex items-start"><i class="fas fa-check-circle text-green-500 mr-2"></i><p class="text-gray-700">Cloud image & video upscaling (hingga 4K)</p></li>
               <li class="flex items-start"><i class="fas fa-check-circle text-green-500 mr-2"></i><p class="text-gray-700">Remove background tool</p></li>
+              <li class="flex items-start"><i class="fas fa-check-circle text-green-500 mr-2"></i><p class="text-gray-700">Video scan & duplicate detection</p></li>
+              <li class="flex items-start"><i class="fas fa-check-circle text-green-500 mr-2"></i><p class="text-gray-700">Built-in AI prompt generator</p></li>
+              <li class="flex items-start"><i class="fas fa-check-circle text-green-500 mr-2"></i><p class="text-gray-700">Private account: Firefly & Google Ultra</p></li>
             </ul>
             <div class="mt-8">
               <a href="https://github.com/inc-okla/Feedio/releases/download/1.0.3/FeedioLinux.deb" class="download-btn w-full flex items-center justify-center px-8 py-4 text-base font-medium rounded-md text-white bg-green-600 hover:bg-green-700 md:text-lg"><i class="fas fa-download mr-2"></i> Download Now (64-bit)</a>
@@ -299,7 +302,7 @@
         <p class="mt-4 max-w-2xl text-xl text-gray-500 lg:mx-auto">Tonton bagaimana profesional memanfaatkan Feedio</p>
       </div>
       <div class="mt-10 max-w-4xl mx-auto">
-        <iframe class="w-full aspect-video rounded-lg shadow-xl" src="https://www.youtube.com/embed/WCPtteLnRqI" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+        <iframe class="w-full aspect-video rounded-lg shadow-xl" src="https://www.youtube.com/embed/EU4xwqyOTRE" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
       </div>
     </div>
   </section>
