--- a/privacy.html
+++ b/privacy.html
@@ -1,100 +1,159 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Feedio APIs – Privacy Policy</title>
-    <style>
-        body { 
-            font-family: Arial, sans-serif; 
-            margin: 40px; 
-            line-height: 1.6; 
-            max-width: 900px;
-        }
-        h1 { color: #333; }
-    </style>
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<title>Feedio APIs — Privacy Policy</title>
+
+<!-- Google Fonts -->
+<link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;600;700&display=swap" rel="stylesheet">
+
+<style>
+    body {
+        margin: 0;
+        padding: 0;
+        font-family: "Inter", sans-serif;
+        background: #f7f9fc;
+        color: #333;
+    }
+
+    /* Header */
+    .header {
+        width: 100%;
+        padding: 60px 20px;
+        background: linear-gradient(135deg, #4F46E5, #6366F1);
+        color: white;
+        text-align: center;
+        box-sizing: border-box;
+    }
+
+    .header h1 {
+        font-size: 42px;
+        margin-bottom: 10px;
+        font-weight: 700;
+    }
+
+    .header p {
+        font-size: 18px;
+        opacity: 0.9;
+    }
+
+    /* Card container */
+    .container {
+        max-width: 900px;
+        margin: -40px auto 50px;
+        background: white;
+        padding: 40px;
+        border-radius: 16px;
+        box-shadow: 0 8px 25px rgba(0,0,0,0.08);
+        box-sizing: border-box;
+    }
+
+    h2 {
+        font-size: 26px;
+        margin-top: 30px;
+        font-weight: 600;
+        color: #111827;
+    }
+
+    p, li {
+        font-size: 16px;
+        line-height: 1.7;
+        color: #4B5563;
+    }
+
+    ul {
+        padding-left: 20px;
+    }
+
+    /* Footer */
+    .footer {
+        text-align: center;
+        padding: 20px 0 40px;
+        font-size: 14px;
+        color: #6B7280;
+    }
+</style>
+
 </head>
 <body>
 
-<h1>Feedio APIs – Privacy Policy</h1>
-<p><strong>Last updated:</strong> February 2025</p>
+<div class="header">
+    <h1>Privacy Policy</h1>
+    <p>Feedio APIs — Browser Extension</p>
+</div>
 
-<p>
-Feedio APIs (“the Extension”) is a browser extension that helps users generate API structures and keys using AI tools. 
-This Privacy Policy explains what data the Extension collects, how it is used, and how it is protected.
-</p>
+<div class="container">
+    <p><strong>Last updated:</strong> February 2025</p>
 
-<h2>1. Data We Collect</h2>
-<p>
-The Extension does <strong>not</strong> collect or store any personally identifiable information (PII).  
-The only data stored locally in the browser is:
-</p>
-<ul>
-    <li>User preferences such as selected AI model</li>
-    <li>Previously generated API parameters</li>
-</ul>
+    <p>
+        Feedio APIs (“the Extension”) is a browser tool that helps users generate API structures using AI services. 
+        This Privacy Policy explains how the Extension uses and protects your information.
+    </p>
 
-<h2>2. How We Use Data</h2>
-<p>Locally stored data is used only to:</p>
-<ul>
-    <li>Improve user experience</li>
-    <li>Remember extension settings</li>
-    <li>Support AI-based API generation</li>
-</ul>
+    <h2>1. Information We Collect</h2>
+    <p>The Extension does <strong>not</strong> collect or store any personally identifiable information (PII).</p>
+    <p>The only data stored is:</p>
+    <ul>
+        <li>Preferred AI model</li>
+        <li>Previously generated API parameters</li>
+    </ul>
 
-<h2>3. Host Permissions</h2>
-<p>
-The extension uses host permissions for:
-</p>
-<ul>
-    <li>https://firefly.adobe.com/</li>
-    <li>https://labs.google/</li>
-</ul>
-<p>
-These permissions are only used to enable communication between the extension UI and these pages. 
-The extension does <strong>not</strong> read or collect any content from those websites.
-</p>
+    <h2>2. How Your Information Is Used</h2>
+    <p>
+        All data is stored locally on your device and is used only to enhance user experience within the extension.
+    </p>
 
-<h2>4. Third-Party Services</h2>
-<p>
-The Extension may connect to external AI services exclusively to generate API content.  
-These requests are initiated <strong>only by the user</strong>.
-We do not receive or store data from these services.
-</p>
+    <h2>3. Host Permissions</h2>
+    <p>The Extension interacts only with the following domains:</p>
+    <ul>
+        <li>https://firefly.adobe.com</li>
+        <li>https://labs.google</li>
+    </ul>
+    <p>
+        These permissions allow the Extension to attach a small script so it can generate API information.  
+        We do <strong>not</strong> collect or read any content from these websites.
+    </p>
 
-<h2>5. No Remote Code</h2>
-<p>
-The Extension does not load or execute remote JavaScript.  
-All logic is packaged inside the extension.
-</p>
+    <h2>4. External APIs</h2>
+    <p>
+        The Extension may send data to AI services only when the user initiates an API generation request.
+        No information is transmitted automatically.
+    </p>
 
-<h2>6. Data Sharing</h2>
-<p>
-We do not share, sell, or transfer any data to third parties.  
-No data leaves the user’s device unless the user triggers an API request.
-</p>
+    <h2>5. No Remote Code</h2>
+    <p>
+        The Extension does not load or run remote JavaScript. All logic is packaged inside the extension files.
+    </p>
 
-<h2>7. Security</h2>
-<p>
-All data is stored locally and protected by Chrome’s extension sandbox.
-</p>
+    <h2>6. Data Sharing</h2>
+    <p>
+        Feedio APIs does not sell, share, or transmit user data to third parties.
+    </p>
 
-<h2>8. Children’s Privacy</h2>
-<p>
-The Extension is not intended for children under 13.
-</p>
+    <h2>7. Security</h2>
+    <p>
+        All stored information remains on the user's device and is protected by browser sandboxing.
+    </p>
 
-<h2>9. Changes to This Policy</h2>
-<p>
-We may update this Privacy Policy.  
-The latest version will always be available here.
-</p>
+    <h2>8. Children's Privacy</h2>
+    <p>
+        The Extension is not designed for children under 13 and does not knowingly collect any data from children.
+    </p>
 
-<h2>10. Contact</h2>
-<p>
-If you have any questions, contact us at: <br>
-<strong>support@feedio.pro</strong>
-</p>
+    <h2>9. Updates to This Policy</h2>
+    <p>
+        We may update this Privacy Policy occasionally. The updated version will always be available on this page.
+    </p>
+
+    <h2>10. Contact</h2>
+    <p>If you have any questions, contact:</p>
+    <p><strong>support@feedio.pro</strong></p>
+</div>
+
+<div class="footer">
+    © 2025 Feedio APIs. All rights reserved.
+</div>
 
 </body>
 </html>
